Update read me and fix footer display

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -88,7 +88,10 @@
                         <td>Closed</td>
                     </tr>
                 </table>
-                
+                <div>
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i><br>
+                    Visit our <a href="https://www.facebook.com/BeBike-Store-100847359323133">Facbook</a>
+                </div>
             </div>
         </div>
     </div>
