--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,11 +14,12 @@
     <div class="row">
         <div class="col">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
+                <!-- <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                </ol> -->
                 <div class="carousel-inner">
                 <!-- Products - shop now -->
                 <div class="carousel-item active">
@@ -41,7 +42,7 @@
                 <div class="carousel-item">
                     <div class="container h-100">
                         <div class="row h-100">
-                            <div class="col-7 col-md-3 my-auto">
+                            <div class="col-7 col-md-4 my-auto">
                                 <h1 class="display-4 logo-font text-black">
                                     Want to ask our experts about products?
                                 </h1>
@@ -65,6 +66,23 @@
                                 <div class="my-5">
                                     <h4>
                                         <a href="{% url 'newsletter_signup' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" aria-label="subscribe">Subscribe</a>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Visit our Facbook -->
+                <div class="carousel-item">
+                    <div class="container h-100">
+                        <div class="row h-100">
+                            <div class="col-7 col-md-3 my-auto">
+                                <h1 class="display-4 logo-font text-black">
+                                    Visit our Facebook <i class="fa fa-facebook-square" aria-hidden="true"></i>, to see latest news
+                                </h1>
+                                <div class="my-5">
+                                    <h4>
+                                        <a href="https://www.facebook.com/BeBike-Store-100847359323133" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" aria-label="subscribe">Facebook</a>
                                     </h4>
                                 </div>
                             </div>
