Adding footer test to readme

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -78,7 +78,7 @@
                         <div class="row h-100">
                             <div class="col-7 col-md-3 my-auto">
                                 <h1 class="display-4 logo-font text-black">
-                                    Visit our Facebook <i class="fa fa-facebook-square" aria-hidden="true"></i>, to see latest news
+                                    Visit our Facebook <i class="fa fa-facebook-square" aria-hidden="true"></i>
                                 </h1>
                                 <div class="my-5">
                                     <h4>
