--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -119,7 +119,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
     })
