--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <!-- my account menu -->
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="My Account">
+                        <a class="text-black nav-link" href="#" class="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="My Account">
                             <div class="text-center">
                                 <div><i class="fa fa-user-circle-o fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
@@ -102,14 +102,12 @@
             </div>
         </div>
         <div class="row bg-white">
-            <ul></ul>
-            <nav class="navbar navbar-expand-lg navbar-light w-100" aria-label="Navigation bar">
+            <ul class="navbar navbar-expand-lg navbar-light w-100" aria-label="Navigation bar">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
-            </nav>
             </ul>
         </div>
         <!-- free delivery banner -->
