--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -126,7 +126,7 @@
 </script>
 {% include 'products/includes/quantity_input_script.html' %}
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
