--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" id="main-nav">
+<li class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item d-block d-md-none">
             <li class="nav-item d-block d-md-none">
@@ -54,4 +54,4 @@
             </div>
         </li>
     </ul>
-</div>
+</li>
