--- a/templates/base.html
+++ b/templates/base.html
@@ -64,13 +64,13 @@
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <!-- my account menu -->
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" class="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="My Account">
+                        <a class="text-black nav-link" href="#" id="user-options-base" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fa fa-user-circle-o fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
                             </div>
                         </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options-base">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
                                     <a href="{% url 'add_product' %}" class="dropdown-item" aria-label="Product Management">Product Management</a>
@@ -103,9 +103,9 @@
         </div>
         <div class="row bg-white">
             <ul class="navbar navbar-expand-lg navbar-light w-100" aria-label="Navigation bar">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </a>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
             </ul>
