--- a/templates/base.html
+++ b/templates/base.html
@@ -104,9 +104,9 @@
         <div class="row bg-white">
             <ul class="navbar navbar-expand-lg navbar-light w-100" aria-label="Navigation bar">
                 <li>
-                    <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                    </a>
+                    </button>
                 </li>
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
