Adding testing code to readme

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -128,10 +128,11 @@
 
 <script>
     // Update quantity on click
+    /*jshint esversion: 6 */ 
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
-    })
+    });
 
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
@@ -145,6 +146,6 @@
          .done(function() {
              location.reload();
          });
-    })
+    });
 </script>
 {% endblock %}
