--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -57,6 +57,7 @@
 {% endblock %}
 {% block postloadjs %}
 <script>
+    /*jshint esversion: 6 */ 
     $(document).ready(function(){
       $('[data-toggle="tooltip"]').tooltip();
     });
