--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,7 @@
 
     {% block postloadjs %}
     <script>
+        /*jshint esversion: 6 */ 
         $('.toast').toast('show');
     </script>
     {% endblock %}
