--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -45,6 +45,7 @@
 {% block postloadjs %}
     {{ block.super }}
     <script>
+        /*jshint esversion: 6 */
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
