Correct readme and add keywords to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,17 @@
 
     {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="bike shop near me, bike shop, mountain bike, bike, bicycling, e bike, bicycle shop, electric bicycle">
+        <meta name="author" content="Kamil Kwiatkowski">
+        <meta name="publisher" content="Kamil Kwiatkowski">
+        <meta name="copyright" content="Kamil Kwiatkowski">
+        <meta name="description" content="Be Bike bike store">
+        <meta name="page-topic" content="Bikes">
+        <meta name="page-type" content="Store">
+        <meta name="audience" content="Everyone">
+        <meta name="robots" content="index, follow">
     {% endblock %}
 
     {% block extra_meta %}
