adding readme tests product

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -3,6 +3,7 @@
 {% load bag_tools %}
 
 {% block extra_css %}
+    <link rel="stylesheet" href="{% static 'static/style.css' %}">
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
