--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,9 +1,11 @@
+<!-- keep shopping button -->
 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg" aria-label="Keep Shopping">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
+<!-- secure checkout button -->
 <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg" aria-label="Secure Checkout">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="icon">
