--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,3 +1,4 @@
+<!-- product image -->
 {% if item.product.image %}
 <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
 {% else %}
