--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -43,12 +43,17 @@
             <!-- Store address details -->
             <div class="col-sm-5 text-center">
                 <h2 class="mb-2">Contact details</h2><br>
+                <!-- addres -->
                 <p><i class="fas fa-map-marker-alt"></i><br>
                     Antonioustraat 8<br>
                     Waalwijk 5144 EF<br>
-                    Netherlands</p>
+                    Netherlands
+                </p>
+                <!-- phone -->
                 <p><i class="fas fa-phone"></i><br>
-                +31 650 004 456</p>
+                    +31 650 004 456
+                </p>
+                <!-- opening time table -->
                 <p><i class="fas fa-store"></i><br>
                 <strong>Our Opening Hours</strong></p>
                 <table class="col">
@@ -88,6 +93,7 @@
                         <td>Closed</td>
                     </tr>
                 </table>
+                <!-- facbook link -->
                 <div>
                     <i class="fa fa-facebook-square" aria-hidden="true"></i><br>
                     Visit our <a href="https://www.facebook.com/BeBike-Store-100847359323133">Facbook</a>
