--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- page header block -->
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -8,10 +8,12 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- content block -->
 {% block content %}
+    <!-- overlay -->
     <div class="overlay"></div>
     <div class="container-fluid footer-padding">
+        <!-- products categories -->
         <div class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Products</h2>
@@ -23,6 +25,7 @@
                 <hr class="w-50 mb-1">
             </div>
         </div>
+        <!-- product sort -->
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
@@ -50,6 +53,7 @@
                         </p>
                     </div>
                 </div>
+                <!-- product detail display -->
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -93,6 +97,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- display for responsivness -->
                         {% if forloop.counter|divisibleby:1 %}
                             <div class="col-12 d-sm-none mb-5">
                                 <hr>
@@ -124,7 +129,7 @@
         </a>	
     </div>
 {% endblock %}
-
+<!-- js for arrow to back  to top of the screen -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
