--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- css block -->
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
+<!-- page header block -->
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -11,10 +12,12 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- content block -->
 {% block content %}
+    <!-- overlay -->
     <div class="overlay"></div>
     <div class="container footer-padding">
+    <!-- my profile neder -->
         <div class="row">
             <div class="col">
                 <hr>
@@ -22,6 +25,7 @@
                 <hr>
             </div>
         </div>
+        <!-- delivery information form -->
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Default Delivery Information</p>
@@ -31,6 +35,7 @@
                     <button class="btn btn-black rounded-0 text-uppercase float-right" aria-label="update">Update Information</button>
                 </form>
             </div>
+            <!-- order history details -->
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
@@ -74,7 +79,7 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- js block to handle country field -->
 {% block postloadjs %}
     {{ block.super }}
     <script src="{% static 'profiles/js/countryfield.js' %}"></script>
