--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,10 +1,13 @@
+<!-- footer template -->
 <footer class="footer py-3 prussian-blue">
     <div class="container text-center text-white">
-
+        <!-- copyrights -->
         <div class="left">Copyright &copy; Kamil Kwiatkowski</div>
+        <!-- contact link -->
         <div class="right text-white">
             <a href="{% url 'contact' %}" class="footer-link" aria-label="Contact"><i class="fa fa-comments" aria-hidden="true"></i> Contact</a>
         </div>
+        <!-- newsletter link -->
         <div class="right">
             <a href="{% url 'newsletter_subscribe' %}" class="footer-link" aria-label="Newsletter"><i class="fa fa-envelope" aria-hidden="true"></i> Newsletter</a>
         </div>
