--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,6 @@
+<!-- top heder for mobile view template -->
 <li class="list-inline-item">
+    <!-- search -->
     <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
@@ -20,6 +22,7 @@
         </form>
     </div>
 </li>
+<!-- my account -->
 <li class="list-inline-item dropdown">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="My Account">
         <div class="text-center">
@@ -28,6 +31,7 @@
         </div>
     </a>
     <div class="dropdown-menu border-0" aria-labelledby="user-options">
+        <!-- autentication check -->
         {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
                 <a href="{% url 'add_product' %}" class="dropdown-item" aria-label="Product Management">Product Management</a>
@@ -40,6 +44,7 @@
         {% endif %}
     </div>
 </li>
+<!-- bag with total -->
 <li class="list-inline-item">
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
         <div class="text-center">
