--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,3 +1,4 @@
+<!-- toast info -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-info"></div>
     <div class="w-100 toast-capper bg-info"></div>
