--- a/bag/templates/bag/bag-total.html
+++ b/bag/templates/bag/bag-total.html
@@ -1,3 +1,4 @@
+<!-- bag total -->
 <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
 <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
 <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
