--- a/newsletter/templates/newsletter/signup.html
+++ b/newsletter/templates/newsletter/signup.html
@@ -27,13 +27,16 @@
 <div class="container mb-2">
     <div class="row">
         <div class="col text-center mt-3">
+            <!-- message to user -->
             <h3 class="my-sm-2 my-md-3 my-lg-5 text-center font-weight-bold">Sign Up for our Newletter here</h3>
+            <!-- crispy form -->
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <!-- {% crispy form %} -->
                 <div class="py-3">
+                    <!-- subscribe button -->
                     <button class="btn btn-black" type="submit">Subscribe</button>
+                    <!-- back button -->
                     <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}" aria-label="Back"> Back</a>
                 </div>
             </form>
