--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- page header block -->
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -8,9 +8,11 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- content block -->
 {% block content %}
+    <!-- overlay -->
     <div class="overlay"></div>
+    <!-- product mangment-->
     <div class="container footer-padding">
         <div class="row">
             <div class="col-12 col-md-6">
@@ -33,7 +35,9 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
+                        <!-- cancel button -->
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}" aria-label="cancel">Cancel</a>
+                        <!-- update button -->
                         <button class="btn btn-black rounded-0" type="submit" aria-label="Add">Add Product</button>
                     </div>
                 </form>
@@ -41,7 +45,7 @@
         </div>
     </div>
 {% endblock %}
-
+<!-- js block to handle adding image -->
 {% block postloadjs %}
     {{ block.super }}
     <script>
