--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,3 +1,4 @@
+<!-- toast error -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-danger"></div>
     <div class="w-100 toast-capper bg-danger"></div>
