--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,4 @@
+<!-- toast succes -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
@@ -7,6 +8,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    <!-- message -->
     <div class="toast-body bg-white">
         <div class="row">
             <div class="col">
@@ -14,6 +16,7 @@
                 <hr class="mt-1 mb-3">
             </div>
         </div>
+        <!-- total in the bag -->
         {% if grand_total and not on_profile_page %}
             <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
             <div class="bag-notification-wrapper">
@@ -34,17 +37,20 @@
                     </div>
                 {% endfor %}
             </div>
+            <!-- delivery -->
             <div class="row">
                 <div class="col">
                     <strong><p class="mt-3 mb-1 text-black">
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
                         <span class="float-right">€{{ total|floatformat:2 }}</span>
                     </p></strong>
+                    <!-- minimum delivery -->
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
                             Spend <strong>€{{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
+                    <!-- secure checkout -->
                     <a href="{% url 'checkout' %}" class="btn btn-black btn-block rounded-0">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
