--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,3 +1,4 @@
+<!-- toast warning -->
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-warning"></div>
     <div class="w-100 toast-capper bg-warning"></div>
